fix(dimmer): show proper webkit scrollbar on inverted variant

--- a/src/definitions/globals/site.less
+++ b/src/definitions/globals/site.less
@@ -155,16 +155,16 @@ a:hover {
   }
 
   /* Inverted UI */
-  body .ui.inverted::-webkit-scrollbar-track {
+  body .ui.inverted:not(.dimmer)::-webkit-scrollbar-track {
     background: @trackInvertedBackground;
   }
-  body .ui.inverted::-webkit-scrollbar-thumb {
+  body .ui.inverted:not(.dimmer)::-webkit-scrollbar-thumb {
     background: @thumbInvertedBackground;
   }
-  body .ui.inverted::-webkit-scrollbar-thumb:window-inactive {
+  body .ui.inverted:not(.dimmer)::-webkit-scrollbar-thumb:window-inactive {
     background: @thumbInvertedInactiveBackground;
   }
-  body .ui.inverted::-webkit-scrollbar-thumb:hover {
+  body .ui.inverted:not(.dimmer)::-webkit-scrollbar-thumb:hover {
     background: @thumbInvertedHoverBackground;
   }
 }
